Setup api and html

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
 <body>
     <div class="container">
         <h1>TO-DO</h1>
-        <input type="text" id="input" placeholder="Add a new task">
-        <button id="add">Add</button>
+        <div id="addForm"></div>
         <div id="todoList"></div>
     </div>
 </body>
