--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <div id="addForm"></div>
         <div id="todoList"></div>
     </div>
+    <div id="loading"></div>
 </body>
 <script type="module" src="app.ts"></script>
 </html>
